fix safari baseline alignment

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -34,9 +34,6 @@ h2
   font-size: $h2Size + em
   letter-spacing: .05em
 
-p
-  line-height: 1.5
-
 .site-main
   max-width: 64rem;
   margin: 0 auto;
@@ -173,7 +170,7 @@ p
   display: grid
   grid-template-columns: 5rem 1.75fr 15rem
   grid-gap: 1rem 2rem
-  line-height: 1.3
+  line-height: 1.5
   align-items: first baseline;
   // outline: 1px dashed lightgray
   // > * 
